--- a/views/payment.html
+++ b/views/payment.html
@@ -261,10 +261,10 @@
     <img src="https://stc.pagseguro.uol.com.br/{{image}}" alt="{{name}}" style="float:left; margin-right:4px;">
 </script>
 <script id="tpl-installment-free" type="text/x-handlebars-template">
-    <option>{{quantity}}x de R${{installmentAmount}} sem juros</option>
+    <option>{{quantity}}x de {{installmentAmount}} sem juros</option>
 </script>
 <script id="tpl-installment" type="text/x-handlebars-template">
-    <option>{{quantity}}x de R${{installmentAmount}} com juros (R${{totalAmount}})</option>
+    <option>{{quantity}}x de {{installmentAmount}} com juros ({{totalAmount}})</option>
 </script>
 <script src="{$pagseguro.urlJS}"></script>
 <script type="text/javascript">
@@ -337,6 +337,62 @@
 
                         $("#brand_field").val(response.brand.name);
                         console.log(response.brand.name);
+
+                                PagSeguroDirectPayment.getInstallments({
+                                    amount: parseFloat("{$order.vltotal}"),
+                                    maxInstallmentNoInterest: parseInt("{$pagseguro.maxInstallmentNoInterest}"),
+                                    brand: response.brand.name,
+                                    success: function (response) {//success
+                                        // Retorna as opções de parcelamento disponíveis
+                                        $("#installments_field").html('<option disabled="disabled"> </option>');
+
+                                        var tlpInstallmentFree = Handlebars.compile($("#tpl-installment-free").html());
+                                        var tlpInstallment = Handlebars.compile($("#tpl-installment").html());
+                                        var formatReal = {
+                                            minimumFractionDigits:2,
+                                            style:"currency",
+                                            currency:"BRL"
+                                        };
+
+                                        $.each( response.installments[$("#brand_field").val()], function(index, installment){// for 1
+
+                                            if( parseInt("{$pagseguro.maxInstallment}") > index  ) {// if 1
+
+                                                        if (installment.interestFree === true) {
+                                                            var $option = $(tlpInstallmentFree({
+                                                                quantity: installment.quantity,
+                                                                installmentAmount: installment.installmentAmount.toLocaleString("pt-BR", formatReal)
+                                                            }));
+
+                                                        } else {
+                                                            var $option = $(tlpInstallment({
+                                                                quantity: installment.quantity,
+                                                                installmentAmount: installment.installmentAmount.toLocaleString("pt-BR", formatReal),
+                                                                totalAmount: installment.totalAmount.toLocaleString("pt-BR", formatReal)
+                                                            }));
+                                                        }
+
+                                                        $option.data("installment", installment);
+                                                        $("#installments_field").append($option);
+                                            }//if 1
+
+                                        } );//for 1
+
+                                        console.log(response);
+                                    },//success
+                                    error: function (response) {
+                                        // callback para chamadas que falharam.
+                                            var errors = [];
+                                            for (var code in response.errors) {
+                                                errors.push(response.errors[code]);
+                                            }
+                                            showError(errors.toString());
+                                    },
+                                    complete: function (response) {
+                                        // Callback para todas chamadas.
+                                    }
+                                });
+
                     },
                     error: function (response) {
                         //tratamento do erro
