--- a/views/payment.html
+++ b/views/payment.html
@@ -336,7 +336,7 @@
                         //bandeira encontrada
 
                         $("#brand_field").val(response.brand.name);
-                        console.log(response.brand.name);
+                        // console.log(response.brand.name);
 
                                 PagSeguroDirectPayment.getInstallments({
                                     amount: parseFloat("{$order.vltotal}"),
@@ -378,7 +378,7 @@
 
                                         } );//for 1
 
-                                        console.log(response);
+                                        //console.log(response);
                                     },//success
                                     error: function (response) {
                                         // callback para chamadas que falharam.
@@ -410,6 +410,89 @@
                 });
 
             }
+
+        });
+
+        function isValidCPF(number){//valida cpf
+
+            var sum;
+            var rest;
+            sum = 0;
+
+            if( number == "00000000000" ) return false;
+
+            for ( i=1; i<=9; i++ ) sum = sum + parseInt(number.substring(i-1, i)) * (11-i);
+            rest = (sum * 10) % 11;
+
+            if( (rest == 10) || (rest == 11) ) rest = 0;
+            if(rest != parseInt(number.substring(9,10))) return false;
+
+            sum = 0;
+            for (i = 1; i <= 10; i++) sum = sum + parseInt(number.substring(i-1,i)) * (12 - i);
+            rest = (sum * 10) % 11;
+
+            if( (rest == 10) || (rest == 11) ) rest = 0;
+            if(rest != parseInt(number.substring(10,11))) return false;
+            return true;
+ 
+        }//valida cpf
+
+        $("#form-credit").on("submit", function(e){
+
+            e.preventDefault();//cancela o envio do formulário
+
+            if( !isValidCPF($("#form-credit [name=cpf]").val()) ){
+                showError("Esse número de CPF não é válido.");
+                return false;
+            }
+
+            $("#form-credit [type=submit]").attr("disabled", "disabled");
+
+            var formData = $(this).serializeArray();
+
+            var params = {};
+
+            $.each(formData, function(index, field){
+
+                params[field.name] = field.value;
+
+            });
+
+           // console.log(params);
+
+            PagSeguroDirectPayment.createCardToken({
+                cardNumber: params.number, // Número do cartão de crédito
+                brand: params.brand, // Bandeira do cartão
+                cvv: params.cvv, // CVV do cartão
+                expirationMonth: params.month, // Mês da expiração do cartão
+                expirationYear: params.year, // Ano da expiração do cartão, é necessário os 4 dígitos.
+                success: function (response) {
+                    // Retorna o cartão tokenizado.
+
+                    console.log("TOKEN", response.card.token);
+                    console.log("HASH", PagSeguroDirectPayment.getSenderHash());
+                    console.log("params",params);
+
+                },
+                error: function (response) {
+                    // Callback para chamadas que falharam.
+
+                        var errors = [];
+
+                        for (var code in response.errors) {
+                            errors.push(response.errors[code]);
+                        }
+
+                        showError(errors.toString());
+                    
+                },
+                complete: function (response) {
+                    // Callback para todas chamadas.
+                    $("#form-credit [type=submit]").removeAttr("disabled");
+                }
+            });
+
+            
 
         });
 
