--- a/views/payment_duckbill.html
+++ b/views/payment_duckbill.html
@@ -56,7 +56,7 @@
               <span class="msg">Error</span>
             </div>
             
-            <form action="/payment_duckbill/credit" class="needs-validation" method="POST">
+            <form action="/payment_duckbill/credit" class="needs-validation" method="POST" name="checkout" id="form-credit">
 
               <div class="row">
                 
@@ -96,7 +96,7 @@
               <div class="row">
                 <div class="col-md-3 mb-3">
                   <label for="cc-expiration">Mes</label>
-                  <input type="text" class="form-control" id="cc-expiration" value="07" placeholder="" name="expirames"  required>
+                  <input type="text" class="form-control" id="cc-expiration" value="{$order.mouthCard}" placeholder="" name="expirames"  required>
                   <div class="invalid-feedback">
                     Expiration date required
                   </div>
@@ -104,7 +104,7 @@
 
                 <div class="col-md-3 mb-3">
                   <label for="cc-expiration">Ano</label>
-                  <input type="text" class="form-control" id="cc-expiration" value="23" placeholder="" name="expiraano"  required>
+                  <input type="text" class="form-control" id="cc-expiration" value="{$order.yearCard}" placeholder="" name="expiraano"  required>
                   <div class="invalid-feedback">
                     Expiration date required
                   </div>
@@ -151,7 +151,7 @@
           PagSeguroDirectPayment.setSessionId('{$pagseguro.id}');
       </script>
 
-      <script>
+      <script>//script principal
 // Função de erro----------------------------------------------------------------------------->
         function showError(error){
           $("#alert-error span.msg").text(error);
@@ -212,7 +212,7 @@
                           $.each(response.installments, function(index, installment){
                                 formatReal.push(index, installment);
                           });
-                          console.log(formatReal[1][0].totalAmount);//pega somente uma parcela
+                          //console.log(formatReal[1][0].totalAmount);//pega somente uma parcela
                           $("#total_amount").val(formatReal[1][0].totalAmount);//vai criar um campo no html, colocar como hiden
                         },
                         error: function (response) {
@@ -244,9 +244,87 @@
             });
 
 
-// Função getInstallments--------------------------------------------------------------------->
-        
-// Função getInstallments--------------------------------------------------------------------->
+// Função isValidCPF--------------------------------------------------------------------->
+            function isValidCPF(number) {//valida cpf
+
+              var sum;
+              var rest;
+              sum = 0;
+
+              if (number == "00000000000") return false;
+
+              for (i = 1; i <= 9; i++) sum = sum + parseInt(number.substring(i - 1, i)) * (11 - i);
+              rest = (sum * 10) % 11;
+
+              if ((rest == 10) || (rest == 11)) rest = 0;
+              if (rest != parseInt(number.substring(9, 10))) return false;
+
+              sum = 0;
+              for (i = 1; i <= 10; i++) sum = sum + parseInt(number.substring(i - 1, i)) * (12 - i);
+              rest = (sum * 10) % 11;
+
+              if ((rest == 10) || (rest == 11)) rest = 0;
+              if (rest != parseInt(number.substring(10, 11))) return false;
+              return true;
+
+}//valida cpf
+// Função isValidCPF--------------------------------------------------------------------->
+
+// jQuery form-credit-------------------------------------------------------------------->
+          $("#form-credit").on("submit", function(e){//envento botão submit
+
+            e.preventDefault();
+
+            $("#form-credit [type=submit]").attr("disabled","disabled");
+
+            if(!isValidCPF("{$order.cpf}")){
+              showError("Erro no número de CPF");
+            }
+
+            var formData = $(this).serializeArray();
+
+            
+
+            var params = {};
+
+            $.each(formData, function(index, field){
+
+              params[field.name] = field.value;
+ 
+            });
+
+            //console.log(params);
+
+            // Função createCardToken---------------------------------------------------------------------------->
+                PagSeguroDirectPayment.createCardToken({
+                  cardNumber: params.numerocartao, // Número do cartão de crédito
+                  brand: params.brand, // Bandeira do cartão
+                  cvv: params.cvv, // CVV do cartão
+                  expirationMonth: params.expirames, // Mês da expiração do cartão
+                  expirationYear: params.expiraano, // Ano da expiração do cartão, é necessário os 4 dígitos.
+                  success: function (response) {
+                    // Retorna o cartão tokenizado.
+                    console.log("TOKEN", response.card.token);
+                    console.log("HASH", PagSeguroDirectPayment.getSenderHash());
+                    console.log("params", params);
+                  },
+                  error: function (response) {
+                    // Callback para chamadas que falharam.
+                        var errors = [];
+                        for (var code in response.errors) {
+                          errors.push(response.errors[code]);
+                        }
+                        showError(errors.toString());
+                  },
+                  complete: function (response) {
+                    // Callback para todas chamadas.
+                    $("#form-credit [type=submit]").removeAttr("disabled");
+                  }
+                });
+            // Função createCardToken---------------------------------------------------------------------------->
+
+          });//envento botão submit
+// jQuery form-credit-------------------------------------------------------------------->
 
       </script>
     
