--- a/views/payment_duckbill.html
+++ b/views/payment_duckbill.html
@@ -318,8 +318,14 @@
                         $.post(
                           "/payment_duckbill/credit",
                           $.param(params),
-                          function (r) {
-                            console.log(r);
+                          function(u){
+                            var response = JSON.parse(u);
+                            if(response.success === true){
+                              window.location.href = "/payment_duckbill/success";
+                            }
+                            else{
+                              showError("Não foi possível efetuar o pagamento.");
+                            }
                           }
                         );
 
