--- a/views/payment-success.html
+++ b/views/payment-success.html
@@ -32,6 +32,7 @@
     <!-- Custom styles for this template -->
     <link href="/assets/form-validation.css" rel="stylesheet">
   </head>
+<body>
 
 <div class="single-product-area">
     <div class="zigzag-bottom"></div>
@@ -63,6 +64,9 @@
     </ul>
   </footer>
 </div>
+
+</body>
+</html>
 <!-- <script src="https://code.jquery.com/jquery.min.js" 
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
         crossorigin="anonymous">
@@ -75,5 +79,3 @@
 </script> -->
 
 <script src="/assets/dist/js/bootstrap.bundle.js">
-</body>
-</html>
